<resources>
    <string name="app_name">BookKeeper</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="author">Author</string>
    <string name="book_title">Book Title</string>
    <string name="todo">TODO</string>
    <string name="last_updated">Last updated</string>
</resources>