<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    android:clickable="true"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:layout_marginStart="7dp"
                android:textColor="#616161"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/authorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/author"
                android:textColor="#616161"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/last_updated"
                android:textColor="#616161"
                android:textSize="15sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRowDelete"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@drawable/ic_delete"
                android:layout_gravity="center_vertical"
                app:tint="#9E9E9E"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

